--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,50 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="img/lasagna.webp" alt="Lasagna-image" height="250" width="250">
+
+    <h2>A brief introduction</h2>
+    <p>Lasagna is a wide, flat sheet of pasta. Lasagna can refer to either the type of 
+        noodle or to the typical lasagna dish which is a dish made with several layers 
+        of lasagna sheets with sauce and other ingredients, 
+        such as meats and cheese, in between the lasagna noodles.</p>
+    <p>A spinach lasagna recipe made with fresh spinach and plenty of cheese — ricotta, Romano, and mozzarella. 
+        This cheesy, hearty lasagna can also be made without the spinach.</p>
+
+    <h3>Ingredients</h3>
+        <ul>
+            <li>15 lasagna noodles</li>
+            <li>2 tablespoons olive oil</li>
+            <li>1 cup chopped fresh mushrooms</li>
+            <li>1 cup chopped onions</li>
+            <li>1 tablespoon minced garlic</li>
+            <li>2 cups fresh spinach</li>
+            <li>3 cups ricotta cheese</li>
+            <li>⅔ cup grated Romano cheese</li>
+            <li>1 egg</li>
+            <li>1 teaspoon salt</li>
+            <li>1 teaspoon dried oregano</li>
+            <li>1 teaspoon dried basil leaves</li>
+            <li> ½ teaspoon ground black pepper</li>
+            <li>3 cups shredded mozzarella cheese</li>
+            <li>3 cups tomato pasta sauce</li>
+            <li>1 cup grated Parmesan cheese</li>
+        </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
+        <li>Bring a large pot of lightly salted water to a boil. 
+            Add lasagna noodles and cook for 8 to 10 minutes or until al dente; drain.</li>
+        <li>Meanwhile, heat olive oil in a skillet over medium-high heat. 
+            Add mushrooms, onions, and garlic and cook until onions are tender; 
+            drain excess liquid and cool.</li>
+        <li>At the same time, bring a small pot of water to a boil; add spinach and simmer for 5 minutes. 
+            Drain and cool slightly; squeeze out any excess liquid and finely chop.</li>
+        <li>Combine ricotta cheese, Romano cheese, egg, salt, oregano, basil, and pepper in a bowl. 
+            Add cooled mushroom mixture and spinach; beat with an electric mixer on low speed for 1 minute.</li>
+        <li>Lay 5 lasagna noodles in the bottom of a 9x13-inch baking dish. Spread 1/3 of the ricotta-spinach mixture over noodles, then sprinkle with 1 cup mozzarella cheese and 1/3 cup Parmesan cheese. 
+            Spread 1 cup pasta sauce over top. Repeat layers two more times, then cover with aluminum foil.</li>
+        <li>Bake in the preheated oven for 1 hour. Cool 15 minutes before serving.</li>
+    </ol>
 </body>
 </html>
