Added a styles.css file and styled the homepage

--- a/index.html
+++ b/index.html
@@ -4,13 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Divya TOP 1st Project</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>My favourite Recipes</h1>
     <ul>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/banana-pancake.html">Banana-Pancake</a></li>
-        <li><a href="recipes/chocolate-chip-cookies.html">Chocolate-Chip-Cookies</a></li>
+        <li class="main-list">
+            <div>
+            <a href="recipes/lasagna.html"><h3>Lasagna</h3></div>
+            <img src="recipes/img/lasagna.webp" alt="lasagna">
+        </a>
+       
+        </li>
+        <li class="main-list">
+            <div>
+            <a href="recipes/banana-pancake.html"><h3>Banana-Pancake</h3></div>
+                <img src="recipes/img/banana-pancake.webp" alt="banana-pancake">
+            </a>
+        </li>
+        <li class="main-list">
+            <div><a href="recipes/chocolate-chip-cookies.html"><h3>Chocolate-Chip-Cookies</h3></div>
+            <img src="recipes/img/chocolate-chip-cookies.webp" alt="chocolate-chip-cookies">
+        </a></li>
     </ul>
     
 </body>
