--- a/recipes/banana-pancake.html
+++ b/recipes/banana-pancake.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana-Pancake</title>
+    <link rel="stylesheet" href="../styles.css">
+    </h3>
 </head>
 <body>
     <h1>Banana Pancakes</h1>
