Added styles to the 3 recipe html files

--- a/recipes/chocolate-chip-cookies.html
+++ b/recipes/chocolate-chip-cookies.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chocolate-Chip-Cookies</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Chocolate Chip Cookies</h1>
-    <img src="img/chocolate-chip-cookies.webp" alt="Lasagna-image" height="250" width="250">
+    <img id="recipe" src="img/chocolate-chip-cookies.webp" alt="Lasagna-image" height="250" width="250">
 
     <h2>A brief introduction</h2>
     <p>A chocolate chip cookie is a sweet baked treat that is recognized by its butter flavor and 
@@ -17,8 +18,9 @@
         Eating a chocolate chip cookie can also help to relieve stress and anxiety. 
         The carbohydrates in the cookie help to release serotonin, which is a “feel good” chemical in your brain.</p>
 
+    <div class="centered-recipe">
     <h3>Ingredients</h3>
-        <ul>
+        <ul class="centered-list">
             <li>2 sticks of butter creamed with white and brown sugars.</li>
             <li>Eggs</li>
             <li>Vanilla</li>
@@ -29,13 +31,17 @@
             <li>Flour</li>
             <li>Nuts(optional)</li>
         </ul>
+    </div> 
+    
+    <div class="centered-recipe">
     <h3>Steps</h3>
-    <ol>
+    <ol id="ordered-list" class="centered-list">
         <li>Beat the butter and sugars, then beat in the eggs and vanilla.</li>
         <li>Dissolve the baking soda in hot water and add to the mixture.</li>
         <li>Stir in the flour, chocolate chips, and walnuts.</li>
         <li>Drop dough onto a prepared baking sheet.</li>
         <li>Bake until the edges are golden brown.</li>
     </ol>
+    </div>
 </body>
 </html>
