--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="img/lasagna.webp" alt="Lasagna-image" height="250" width="250">
+    <img id="recipe" src="img/lasagna.webp" alt="Lasagna-image" height="250" width="250">
 
     <h2>A brief introduction</h2>
     <p>Lasagna is a wide, flat sheet of pasta. Lasagna can refer to either the type of 
@@ -17,8 +18,9 @@
     <p>A spinach lasagna recipe made with fresh spinach and plenty of cheese — ricotta, Romano, and mozzarella. 
         This cheesy, hearty lasagna can also be made without the spinach.</p>
 
+    <div class="centered-recipe">     
     <h3>Ingredients</h3>
-        <ul>
+        <ul class="centered-list">
             <li>15 lasagna noodles</li>
             <li>2 tablespoons olive oil</li>
             <li>1 cup chopped fresh mushrooms</li>
@@ -36,8 +38,9 @@
             <li>3 cups tomato pasta sauce</li>
             <li>1 cup grated Parmesan cheese</li>
         </ul>
+        </div>
     <h3>Steps</h3>
-    <ol>
+    <ol id="ordered-list">
         <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
         <li>Bring a large pot of lightly salted water to a boil. 
             Add lasagna noodles and cook for 8 to 10 minutes or until al dente; drain.</li>
