Added a class in banana-pancake.html for positioning of li in ul

--- a/recipes/banana-pancake.html
+++ b/recipes/banana-pancake.html
@@ -23,7 +23,7 @@
     
     <div class="centered-recipe">    
     <h3>Ingredients</h3>
-        <ul>
+        <ul class="centered-list">
             <li>Flour</li>
             <li>Sugar</li>
             <li>Baking Powder</li>
